--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Gov 50 Final Project"
-author: "Your Name Here"
+author: "Alia Al-Wir"
 description: "My final project"
 output:
   distill::distill_article:
@@ -11,4 +11,4 @@ output:
 
 ## Project thoughts
 
-I am interested in exploring data related to...
+I am interested in exploring data related to unemployment in the MENA region. I am particularly interested in exploring the trajectory of unemployment rates since the Arab Spring, since that was a driving factor in many countries. While some countries unemployment rates have dropped, others see even higher rates than before the protests and revolutions started. As such, I would be interested to see if there is a pattern between the effectiveness and changes that emerged post-Arab Spring, and unemployment rates. 
