--- a/index.Rmd
+++ b/index.Rmd
@@ -15,5 +15,14 @@ I am interested in exploring data related to unemployment in the MENA region. I 
 
 ## Milestone 2
 
-Do greater economic concerns and problems correlate to increased mistrust in the government, and how has this changed since the Arab Spring in the Arab states? I will explore how people's economic concerns have shifted in Arab countries and how this relates to how much they trust their government. I hypothesize that prior to the Arab Spring and in its early days, there were significant economic concerns and significant government mistrust. However, as the subsequent revolutions died down, economic apathy decreased and citizens' faith and and hope for their government increased. However, post-2020 and post-COVID will see an increase in economic crises, and as such people will subsequently distrust their government. I will rely on data from the Arab Barometer Surveys (https://www.arabbarometer.org/survey-data/). They have seven data sets which consist of surveys conducted with citizens of Arab countries regarding all these factors, and their answers are given on a numerical scal of 1-4. 4 indicates less trust and 1 indicates more trust. The numbers 98 and 99 indicate people who did not know how to answer and refused to answer respectively. I will be able to examine the mean answers to specific questions regarding both economic and government apathy and trust, as well as calculate an overall mean response for these countries. I will also need to omit the 98 and 99 variables when calculating these means and instead calculate what proportion of people refused to give an answer. 
+Do greater economic concerns and problems correlate to increased mistrust in the government, and how has this changed since the Arab Spring in the Arab states? I will explore how people's economic concerns have shifted in Arab countries and how this relates to how much they trust their government. I hypothesize that prior to the Arab Spring and in its early days, there were significant economic concerns and significant government mistrust. However, as the subsequent revolutions died down, economic apathy decreased and citizens' faith and and hope for their government increased. I will rely on data from the Arab Barometer Surveys (https://www.arabbarometer.org/survey-data/). They have seven data sets which consist of surveys conducted with citizens of Arab countries regarding all these factors, and their answers are given on a numerical scal of 1-4. 4 indicates less trust and 1 indicates more trust. The numbers 98 and 99 indicate people who did not know how to answer and refused to answer respectively. I will be able to examine the mean answers to specific questions regarding both economic and government apathy and trust, as well as calculate an overall mean response for these countries. I will also need to omit the 98 and 99 variables when calculating these means and instead calculate what proportion of people refused to give an answer. 
 However, one issue I will face is that not all the Arab states were included in all the reports. The most recent report from 2021-2022 contains the largest number of Arab states surveyed at 12, while the first one conducted from 2006-2009 only examines seven states. 
+
+```{r}
+load("data/ICPSR_35040/DS0001/35040-0001-Data.rda")
+
+load("data/ICPSR_26581/DS0001/26581-0001-Data.rda")
+
+
+```
+
