--- a/index.Rmd
+++ b/index.Rmd
@@ -67,7 +67,7 @@ data_plot |>
        (1 being the most optimistic and 5 being the least optimistic)",
        title = "Mean of Economic Optimism over the Next 3-5 Years in Arab Countries",
        subtitle = "Source: Arab Barometer: Public Opinion Survey 2006-2009")+
-  theme(text = element_text(size = 8),
-         axis.title.y = element_text(size = 8))
+  theme(axis.title.y = element_text(size = 8), 
+        text = element_text(size = 8))
 ```
 
